--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'About', about_path %>
+<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', about_path %>
 
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 	<body>
 
 	<header id="main-header">
-			<h1>Fourth Attempts - Welcome to the Citizen Science Blog!</h1>
+			<h1>Welcome to the Citizen Science Blog!</h1>
 			<p>Looking to become involved in citizen science projects?  You've come to the right place!</p>
 		</header><!-- end main-header -->
 		
