Create homepage and add links

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,71 @@
+$navbar-default-bg: #551a8b;
+
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+    float: left;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    
+    
+}
+
+#logo:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.center {
+    text-align: center;
+}
+
+.jumbotron {
+    background-image:  asset-url("astronomy.jpg");
+    background-size: cover;
+    height:  550px;
+}
+
+.jumbotron h1 {
+    color: #fff;
+    text-align: center;
+    margin-bottom:  30px;
+    letter-spacing:  -1px;
+    font-weight:  bold;
+}
+
+.btn-xlarge {
+    font-size:  1.7em;
+    background-color: black;
+    
+}
+
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #551a8b;
+    color: #777;
+}
+
+footer a:hoover {
+    color: #222;
+    
+}
+
+footer small {
+    float: left;
+    
+}
+
+footer ul {
+    float:  right;
+    list-style: none;
+    
+}
+
+footer ul li {
+    float:  left;
+    margin-left: 15px;
+}
