style form partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
    
        <%= render "layouts/messages" %>
     
-        <div class="center container">
+        <div class="container">
             
            
         <%= yield %>
