add styling to show template

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,15 @@ $navbar-default-bg: #551a8b;
     
 }
 
+.article-actions {
+    border-top: 1px solid #551a8b;
+    padding-top: 5px;
+}
+
+.description {
+    margin-top: 0;
+}
+
 footer {
     margin-top: 45px;
     padding-top: 5px;
